--- a/namecolorchange.html
+++ b/namecolorchange.html
@@ -4,7 +4,7 @@
     <title>Colorful Page</title>
 </head>
 <body>
-    <form action="namecolorchangephp.php" method="get">
+    <form action="namecolorchangephp.php" method="post">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" required><br><br>
         
